--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
   <title>Column Count Country Concierge</title>
 </head>
 <body>
-  
+  <header class="header">
+    <!-- logo -->
+    <img src="/images/countLogo.jpg" alt="CCCC Logo">
+    <!-- navbar -->
+    <nav class="nav">
+      <a href="./index.html" class="nav__btn">Home</a>
+      <a href="canada.html" class="nav__btn">Canada</a>
+      <a href="china.html" class="nav__btn">China</a>
+      <a href="greece.html" class="nav__btn">Greece</a>
+      <a href="ireland.html" class="nav__btn">Ireland</a>
+      <a href="japan.html" class="nav__btn">Japan</a>
+    </nav>
+  </header>
 </body>
 </html>
