--- a/pages/canada.html
+++ b/pages/canada.html
@@ -3,16 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/./styles/main.css">
   <title>Column Count Country Concierge - Canada</title>
 </head>
 <body>
   <header class="header">
     <!-- logo -->
-    <img src="#" alt="CCCC Logo">
+    <img src="/./images/countLogo.jpg" alt="CCCC Logo">
     <!-- navbar -->
     <nav class="nav">
-      <a href="./index.html" class="nav__btn">Home</a>
-      <a href="canada.html" class="nav__btn">Canada</a>
+      <a href="/./index.html" class="nav__btn">Home</a>
+      <a href="canada.html" class="nav__btn nav__btn--active">Canada</a>
       <a href="china.html" class="nav__btn">China</a>
       <a href="greece.html" class="nav__btn">Greece</a>
       <a href="ireland.html" class="nav__btn">Ireland</a>
