minor changes to japan page

--- a/pages/japan.html
+++ b/pages/japan.html
@@ -56,7 +56,7 @@
         </ul>
       </section>
       <section class="lists__list">
-        <h3>Notable Canadians</h3>
+        <h3>Notable Japanese Citizens</h3>
         <ul class="citizens-list">
           <a href="https://en.wikipedia.org/wiki/Akira_Kurosawa" target="_blank"><li>Akira Kurosawa, 黒澤明</li></a>          
           <a href="https://en.wikipedia.org/wiki/Toshiro_Mifune" target="_blank"><li>Toshiro Mifune, 三船敏郎</li></a>          
