--- a/pages/japan.html
+++ b/pages/japan.html
@@ -17,7 +17,7 @@
     <!-- navbar -->
     <nav class="nav">
       <a href="/./index.html" class="nav__btn">Home</a>
-      <a href="canada.html" class="nav__btn nav__btn--active">Canada</a>
+      <a href="canada.html" class="nav__btn">Canada</a>
       <a href="china.html" class="nav__btn">China</a>
       <a href="greece.html" class="nav__btn">Greece</a>
       <a href="ireland.html" class="nav__btn">Ireland</a>
