updated Ireland page

--- a/pages/ireland.html
+++ b/pages/ireland.html
@@ -15,7 +15,7 @@
       <a href="canada.html" class="nav__btn">Canada</a>
       <a href="china.html" class="nav__btn">China</a>
       <a href="greece.html" class="nav__btn">Greece</a>
-      <a href="ireland.html" class="nav__btn">Ireland</a>
+      <a href="ireland.html" class="nav__btn nav__btn--active">Ireland</a>
       <a href="japan.html" class="nav__btn">Japan</a>
     </nav>
   </header>
@@ -26,29 +26,29 @@
     <article class="lists">
       <section class="lists__list"><h3>Cities to Visit</h3>
         <ul>
-            <li>Belfast</li>
-            <li>Dublin</li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li><a href="https://www.irishtourism.com/belfast">Belfast</a></li>
+            <li><a href="https://www.irishtourism.com/cork">Cork</a></li>
+            <li><a href="https://www.irishtourism.com/dublin">Dublin</a></li>
+            <li><a href="https://www.irishtourism.com/galway">Galway</a></li>
+            <li><a href="https://www.irishtourism.com/limerick">Limerick</a></li>
          </ul>
       </section>
       <section class="lists__list"><h3>Landmarks to Visit</h3>
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li><a href="https://www.cntraveler.com/galleries/2016-03-15/the-most-beautiful-places-in-ireland">Achill Island, Co. Mayo</a></li>
+            <li><a href="https://www.cntraveler.com/galleries/2016-03-15/the-most-beautiful-places-in-ireland">Cliffs of Moher, Co. Clare</a></li>
+            <li><a href="https://www.cntraveler.com/galleries/2016-03-15/the-most-beautiful-places-in-ireland">Killarney National Park, Co. Kerry</a></li>
+            <li><a href="https://www.cntraveler.com/galleries/2016-03-15/the-most-beautiful-places-in-ireland">Rock of Cashel, Co. Tipperary</a></li>
+            <li><a href="https://www.cntraveler.com/galleries/2016-03-15/the-most-beautiful-places-in-ireland">The Long Room, Trinity College, Co. Dublin</a></li>
         </ul>
       </section>
       <section class="lists__list"><h3>Notable Canadians</h3>
         <ul>
-            <li>Liam Neeson</li>
-            <li>Bono</li>
-            <li>Oscar Wilde</li>
-            <li>The Corrs</li>
-            <li>Pierce Brosnan</li>
+            <li><a href="https://en.wikipedia.org/wiki/Bono">Bono</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/Liam_Neeson">Liam Neeson</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/Oscar_Wilde">Oscar Wilde</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/Pierce_Brosnan">Pierce Brosnan</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/The_Corrs">The Corrs</a></li>
         </ul>
       </section>
     </article>
