--- a/pages/ireland.html
+++ b/pages/ireland.html
@@ -11,7 +11,7 @@
     <img src="/./images/countLogo.jpg" alt="CCCC Logo">
     <!-- navbar -->
     <nav class="nav">
-      <a href="./index.html" class="nav__btn">Home</a>
+      <a href="/./index.html" class="nav__btn">Home</a>
       <a href="canada.html" class="nav__btn">Canada</a>
       <a href="china.html" class="nav__btn">China</a>
       <a href="greece.html" class="nav__btn">Greece</a>
@@ -21,7 +21,7 @@
   </header>
 
   <main class="main">
-    <div class="main__image"><img src="/.pages/.images/cliffsOfMoherIrelandCrGetty.jpg" alt="Ireland"></div>
+    <div class="main__image"><img src="/./images/cliffsOfMoherIrelandCrGetty.jpg" alt="Ireland"></div>
     <h1 class="main__country-name">Ireland - Éire go</h1>
     <article class="lists">
       <section class="lists__list"><h3>Cities to Visit</h3>
