added main picture; added links and content to each box

--- a/pages/China.html
+++ b/pages/China.html
@@ -4,30 +4,53 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Column Count Country Concierge - China</title>
-  <link rel="stylesheet" href="/styles/mainBody.css">
+  <link rel="stylesheet" href="/styles/main.css">
 </head>
 <body>
   <header class="header">
     <!-- logo -->
-    <img src="#" alt="CCCC Logo">
+    <img src="/images/countLogo.jpg" alt="CCCC Logo">
     <!-- navbar -->
-    <nav class="nav">
+    <nav class="nav nav__btn--active">
       <a href="./index.html" class="nav__btn">Home</a>
       <a href="canada.html" class="nav__btn">Canada</a>
       <a href="china.html" class="nav__btn">China</a>
       <a href="greece.html" class="nav__btn">Greece</a>
       <a href="ireland.html" class="nav__btn">Ireland</a>
-      <a href="japan.html" class="nav__btn">Japan</a>
+      <a href="japan.html" class="nav__btn ">Japan</a>
     </nav>
   </header>
 
   <main class="main">
-    <div  class="main__image" ><img src="#" alt="Canada"></div>
+    <div class="main__image"><img   src="/images/ChinaAssets/Mao.jpg" alt="Canada"></div>
     <h1 class="main__country-name">The People's Republic of China</h1>
     <article class="lists">
-      <section class="lists__list"><h3>Cities to Visit</h3></section>
-      <section class="lists__list"><h3>Landmarks to Visit</h3></section>
-      <section class="lists__list"><h3>Great Chinese Citizen</h3></section>
+      <section class="lists__list">
+        <h3>Cities to Visit</h3>
+        <p><a href="https://en.wikipedia.org/wiki/Qingdao">Qing Dao</a></p>
+        <p><a href="https://www.travelchinaguide.com/cityguides/macau/"></a></p>
+        <p><a href="http://">Macao</a></p>
+        <p><a href="https://www.travelchinaguide.com/cityguides/lijiang.htm">Lijiang</a></p>
+        <p><a href="https://www.travelchinaguide.com/cityguides/chengdu.htm">Chengdu</a></p>
+    </section>
+      <section class="lists__list">
+        <h3>Landmarks to Visit</h3>
+        <p>
+        <a href="https://www.chinahighlights.com/beijing/forbidden-city/">The Forbidden City (故宫) </a></p>
+        <p><a href="https://www.chinaeducationaltours.com/guide/topic-terracotta-army.htm">Terracotta Army</a></p>
+        <p><a href="https://www.chinaeducationaltours.com/guide/topic-giant-panda.htm">Panda Valley</a></p>
+          <p><a href="https://www.chinaeducationaltours.com/guide/tibet-potala-palace.htm">Potala Palace (布达拉宫)</a></p>
+        <p><a href="https://en.wikipedia.org/wiki/Leshan_Giant_Buddha">Leshan Giant Buddha (樂山大佛)</a>
+        </p>
+      </section>
+      <section class="lists__list">
+        <h3>Great Chinese Citizen</h3>
+        <p><a href="https://en.wikipedia.org/wiki/Bruce_Lee">Bruce Lee  李小龍</a></p>
+        <p><a href="https://en.wikipedia.org/wiki/Jackie_Chan">Jackie Chan  陳港生</a></p>
+        <p><a href="https://en.wikipedia.org/wiki/Jack_Ma">Jack Ma  马云</a></p>
+        <p><a href="https://en.wikipedia.org/wiki/Yao_Ming">Yao Ming 	姚明</a></p>
+        <p><a href="https://en.wikipedia.org/wiki/Liu_Yifei">Li Yifei 	刘亦菲</a></p>
+      </section>
     </article>
   </main>
 
