more info in lists

--- a/pages/greece.html
+++ b/pages/greece.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/./styles/main.css">
   <title>Column Count Country Concierge - Canada</title>
 </head>
 <body>
@@ -24,17 +27,20 @@
 </html><div class="main__image"><img src="/./images/greece.jpg" alt="Greece"></div>
     <h1 class="main__country-name">Greece-d Lightning</h1>
     <article class="lists">
-      <section class="lists__list"><h3>Cities to Visit</h3>
-        <div>Santorini</div>
-        <div>Athens</div>
-        <div>Mykonos</div>
-        <div>Rhodes</div>
+      <section class="lists__list">
+        <h3>Cities to Visit</h3>
+        <ul class="lists_citylinks">
+          <div>Santorini</div>
+          <div>Athens</div>
+          <div>Mykonos</div>
+          <div>Rhodes</div>
+        </ul>
       </section>
       <section class="lists__list"><h3>Landmarks to Visit</h3></section>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+        <div>Acropolis of Athens</div>
+        <div>The Parthenon</div>
+        <div>Delphi</div>
+        <div>Monasteries of Meteora</div>
       </section>
       <section class="lists__list"><h3>Notable Greeks</h3>
         <div>Tommy Lee</div>
