--- a/index.html
+++ b/index.html
@@ -1,26 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Column Count Country Concierge</title>
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/styles/main.css">
+    <title>Column Count Country Concierge - Home</title>
+    <!-- temporary css link -->
+    <link rel="stylesheet" href="styles/landingpage.css">
+  </head>
 <body>
   <header class="header">
-    <img src="/images/countLogo.jpg" alt="Count Logo">
+    <!-- logo -->
+    <img src="/./images/countLogo.jpg" alt="CCCC Logo">
     <!-- navbar -->
-    <nav class="nav">
-      <a href="index.html" class="nav__btn">Home</a>
-      <a href="/pages/canada.html" class="nav__btn">Canada</a>
-      <a href="/pages/china.html" class="nav__btn">China</a>
-      <a href="/pages/greece.html" class="nav__btn">Greece</a>
-      <a href="/pages/ireland.html" class="nav__btn">Ireland</a>
-      <a href="/pages/japan.html" class="nav__btn">Japan</a>
-    </nav>
-  </header>
-  <main class="container">
+    <div class="header__container">
+      <div class="site-title"><h1>Column Counts Country Concierge</h1></div>
+      <nav class="nav">
+        <a href="#" class="nav__btn   nav__btn--active">Home</a>
+        <a href="pages/canada.html" class="nav__btn">Canada</a>
+        <a href="pages/china.html" class="nav__btn">China</a>
+        <a href="pages/greece.html" class="nav__btn">Greece</a>
+        <a href="pages/ireland.html" class="nav__btn">Ireland</a>
+        <a href="pages/japan.html" class="nav__btn">Japan</a>
+      </nav>
+    </div>
+  </header><main class="container">
     <h1 class="welcome-headline">Welcome!!!!!!!!!!</h1>
     <article class="welcome">
       <setion class="welcome__country"><a href="/pages/canada.html"><img src="/images/canadaFlag.png" alt="canadian flag" class="flag"></setion></a>
