Update notable people, linked main css and nav bar

--- a/pages/ireland.html
+++ b/pages/ireland.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Column Count Country Concierge - Ireland</title>
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/./styles/main.css">
+    <title>Column Counts Country Concierge - Ireland</title>
+  </head>
 <body>
   <header class="header">
     <!-- logo -->
@@ -42,7 +45,7 @@
             <li><a href="https://www.cntraveler.com/galleries/2016-03-15/the-most-beautiful-places-in-ireland">The Long Room, Trinity College, Co. Dublin</a></li>
         </ul>
       </section>
-      <section class="lists__list"><h3>Notable Canadians</h3>
+      <section class="lists__list"><h3>Notable Irish People</h3>
         <ul>
             <li><a href="https://en.wikipedia.org/wiki/Bono">Bono</a></li>
             <li><a href="https://en.wikipedia.org/wiki/Liam_Neeson">Liam Neeson</a></li>
