small change for active nav link fix

--- a/pages/China.html
+++ b/pages/China.html
@@ -11,10 +11,10 @@
     <!-- logo -->
     <img src="/images/countLogo.jpg" alt="CCCC Logo">
     <!-- navbar -->
-    <nav class="nav nav__btn--active">
+    <nav class="nav ">
       <a href="./index.html" class="nav__btn">Home</a>
       <a href="canada.html" class="nav__btn">Canada</a>
-      <a href="china.html" class="nav__btn">China</a>
+      <a href="china.html" class="nav__btn nav__btn--active">China</a>
       <a href="greece.html" class="nav__btn">Greece</a>
       <a href="ireland.html" class="nav__btn">Ireland</a>
       <a href="japan.html" class="nav__btn ">Japan</a>
