fixed broken link for Macao

--- a/pages/China.html
+++ b/pages/China.html
@@ -29,7 +29,7 @@
         <h3>Cities to Visit</h3>
         <p><a href="https://en.wikipedia.org/wiki/Qingdao">Qing Dao</a></p>
         <p><a href="https://www.travelchinaguide.com/cityguides/macau/"></a></p>
-        <p><a href="http://">Macao</a></p>
+        <p><a href="https://www.worlddata.info/asia/macao/index.php">Macao</a></p>
         <p><a href="https://www.travelchinaguide.com/cityguides/lijiang.htm">Lijiang</a></p>
         <p><a href="https://www.travelchinaguide.com/cityguides/chengdu.htm">Chengdu</a></p>
     </section>
