--- a/pages/China.html
+++ b/pages/China.html
@@ -11,14 +11,17 @@
     <!-- logo -->
     <img src="/images/countLogo.jpg" alt="CCCC Logo">
     <!-- navbar -->
-    <nav class="nav ">
-      <a href="./index.html" class="nav__btn">Home</a>
-      <a href="canada.html" class="nav__btn">Canada</a>
-      <a href="china.html" class="nav__btn nav__btn--active">China</a>
-      <a href="greece.html" class="nav__btn">Greece</a>
-      <a href="ireland.html" class="nav__btn">Ireland</a>
-      <a href="japan.html" class="nav__btn ">Japan</a>
-    </nav>
+    <div class="header__container">
+      <div class="site-title"><h1>Column Counts Country Concierge</h1></div>
+      <nav class="nav">
+        <a href="/./index.html" class="nav__btn">Home</a>
+        <a href="canada.html" class="nav__btn ">Canada</a>
+        <a href="china.html" class="nav__btn nav__btn--active">China</a>
+        <a href="greece.html" class="nav__btn">Greece</a>
+        <a href="ireland.html" class="nav__btn">Ireland</a>
+        <a href="japan.html" class="nav__btn">Japan</a>
+      </nav>
+    </div>
   </header>
 
   <main class="main">
