--- a/index.html
+++ b/index.html
@@ -26,14 +26,15 @@
         <a href="pages/japan.html" class="nav__btn">Japan</a>
       </nav>
     </div>
-  </header><main class="container">
+  </header>
+  <main class="container">
     <h1 class="welcome-headline">Welcome!!!!!!!!!!</h1>
     <article class="welcome">
-      <setion class="welcome__country"><a href="/pages/canada.html"><img src="/images/canadaFlag.png" alt="canadian flag" class="flag"></setion></a>
+      <setion class="welcome__country"><a href="/pages/canada.html"><img src="/images/canadaFlag.png" alt="canadian flag" class="flag flag-canada"></setion></a>
       <setion class="welcome__country"><a href="/pages/china.html"><img src="/images/chinaFlag.png" alt="chinese flag" class="flag"></setion></a>
       <setion class="welcome__country"><a href="/pages/greece.html"><img src="/images/greeceFlag.png" alt="greek flag" class="flag"></setion></a>
-      <setion class="welcome__country"><a href="/pages/ireland.html"><img src="/images/irelandFlag.png" alt="irish flag" class="flag"></setion></a>
-      <setion class="welcome__country"><a href="/pages/japan.html"><img src="/images/japanFlag.png" alt="japanese flag" class="flag"></setion></a>
+      <setion class="welcome__country"><a href="/pages/ireland.html"><img src="/images/irelandFlag.png" alt="irish flag" class="flag flag-ireland"></setion></a>
+      <setion class="welcome__country"><a href="/pages/japan.html"><img src="/images/japanFlag.png" alt="japanese flag" class="flag flag-japan"></setion></a>
     </article>
   </main>
   <footer class="footer">
