--- a/pages/greece.html
+++ b/pages/greece.html
@@ -6,21 +6,24 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/./styles/main.css">
-  <title>Column Count Country Concierge - Canada</title>
+  <title>Column Count Country Concierge - Greece</title>
 </head>
 <body>
   <header class="header">
     <!-- logo -->
-    <img src= "/./images/countLogo.jpg" alt="CCCC Logo">
+    <img src="/./images/countLogo.jpg" alt="CCCC Logo">
     <!-- navbar -->
-    <nav class="nav">
-      <a href="./index.html" class="nav__btn">Home</a>
-      <a href="canada.html" class="nav__btn">Canada</a>
-      <a href="china.html" class="nav__btn">China</a>
-      <a href="greece.html" class="nav__btn nav__btn--active" >Greece</a>
-      <a href="ireland.html" class="nav__btn">Ireland</a>
-      <a href="japan.html" class="nav__btn">Japan</a>
-    </nav>
+    <div class="header__container">
+      <div class="site-title"><h1>Column Counts Country Concierge</h1></div>
+      <nav class="nav">
+        <a href="/./index.html" class="nav__btn">Home</a>
+        <a href="canada.html" class="nav__btn">Canada</a>
+        <a href="china.html" class="nav__btn">China</a>
+        <a href="greece.html" class="nav__btn  nav__btn--active">Greece</a>
+        <a href="ireland.html" class="nav__btn">Ireland</a>
+        <a href="japan.html" class="nav__btn">Japan</a>
+      </nav>
+    </div>
   </header>
 
   <main class="main">
@@ -28,26 +31,31 @@
     <h1 class="main__country-name">Greece-d Lightning</h1>
     <article class="lists">
       <section class="lists__list">
-        <h3>Cities to Visit</h3>
-        <ul class="lists_citylinks">
-          <div>Santorini</div>
-          <div>Athens</div>
-          <div>Mykonos</div>
-          <div>Rhodes</div>
+        <h3>Cities to Visit:</h3>
+        <ul class="lists_cityLinks">
+          <a href="https://en.wikipedia.org/wiki/Santorini" target="_blank"><li>Santorini</li></a>
+          <a href="https://en.wikipedia.org/wiki/Athens" target="_blank"></a><li>Athens</li></a>
+          <a href="https://en.wikipedia.org/wiki/Mykonos" target="_blank"></a><li>Mykonos</li></a>
+          <a href="https://en.wikipedia.org/wiki/Rhodes" target="_blank"></a><li>Rhodes</li></a>
         </ul>
       </section>
-      <section class="lists__list"><h3>Landmarks to Visit</h3></section>
-        <div>Acropolis of Athens</div>
-        <div>The Parthenon</div>
-        <div>Delphi</div>
-        <div>Monasteries of Meteora</div>
+      <section class="lists__list">
+        <h3>Landmarks to Visit:</h3>
+        <ul class="lists_landmarksLinks">
+          <a href="https://en.wikipedia.org/wiki/Acropolis_of_Athens" target="_blank"><li>Acropolis of Athens</li></a>
+          <a href="https://en.wikipedia.org/wiki/Parthenon" target="_blank"></a><li>The Parthenon</li></a>
+          <a href="https://en.wikipedia.org/wiki/Delphi" target="_blank"></a><li>Delphi</li></a>
+          <a href="https://en.wikipedia.org/wiki/Meteora" target="_blank"></a><li>Monasteries of Meteora</li></a>
+        </ul>
       </section>
-      <section class="lists__list"><h3>Notable Greeks</h3>
-        <div>Tommy Lee</div>
-        <div>Aristotle Onassis</div>
-        <div>O.P. Aristotle</div>
-        <div>Homer</div>
-        <div>Yanni</div>
+      <section class="lists__list"><h3>Notable Greeks:</h3>
+        <ul class="lists_landmarksLinks">
+          <a href="https://en.wikipedia.org/wiki/Tommy_Lee" target="_blank"><li>Tommy Lee</li></a>
+          <a href="https://en.wikipedia.org/wiki/Aristotle_Onassis" target="_blank"></a><li>Aristotle Onassis</li></a>
+          <a href="https://en.wikipedia.org/wiki/Aristotle" target="_blank"></a><li>The O.P. (original philosopher) Aristotle</li></a>
+          <a href="https://en.wikipedia.org/wiki/Homer" target="_blank"></a><li>Homer</li></a>
+          <a href="https://en.wikipedia.org/wiki/Yanni" target="_blank"></a><li>Yanni</li></a>
+        </ul>
       </section>
     </article>
   </main>
