--- a/pages/greece.html
+++ b/pages/greece.html
@@ -34,27 +34,27 @@
         <h3>Cities to Visit:</h3>
         <ul class="lists_cityLinks">
           <a href="https://en.wikipedia.org/wiki/Santorini" target="_blank"><li>Santorini</li></a>
-          <a href="https://en.wikipedia.org/wiki/Athens" target="_blank"></a><li>Athens</li></a>
-          <a href="https://en.wikipedia.org/wiki/Mykonos" target="_blank"></a><li>Mykonos</li></a>
-          <a href="https://en.wikipedia.org/wiki/Rhodes" target="_blank"></a><li>Rhodes</li></a>
+          <a href="https://en.wikipedia.org/wiki/Athens" target="_blank"><li>Athens</li></a>
+          <a href="https://en.wikipedia.org/wiki/Mykonos" target="_blank"><li>Mykonos</li></a>
+          <a href="https://en.wikipedia.org/wiki/Rhodes" target="_blank"><li>Rhodes</li></a>
         </ul>
       </section>
       <section class="lists__list">
         <h3>Landmarks to Visit:</h3>
         <ul class="lists_landmarksLinks">
           <a href="https://en.wikipedia.org/wiki/Acropolis_of_Athens" target="_blank"><li>Acropolis of Athens</li></a>
-          <a href="https://en.wikipedia.org/wiki/Parthenon" target="_blank"></a><li>The Parthenon</li></a>
-          <a href="https://en.wikipedia.org/wiki/Delphi" target="_blank"></a><li>Delphi</li></a>
-          <a href="https://en.wikipedia.org/wiki/Meteora" target="_blank"></a><li>Monasteries of Meteora</li></a>
+          <a href="https://en.wikipedia.org/wiki/Parthenon" target="_blank"><li>The Parthenon</li></a>
+          <a href="https://en.wikipedia.org/wiki/Delphi" target="_blank"><li>Delphi</li></a>
+          <a href="https://en.wikipedia.org/wiki/Meteora" target="_blank"><li>Monasteries of Meteora</li></a>
         </ul>
       </section>
       <section class="lists__list"><h3>Notable Greeks:</h3>
         <ul class="lists_landmarksLinks">
           <a href="https://en.wikipedia.org/wiki/Tommy_Lee" target="_blank"><li>Tommy Lee</li></a>
-          <a href="https://en.wikipedia.org/wiki/Aristotle_Onassis" target="_blank"></a><li>Aristotle Onassis</li></a>
-          <a href="https://en.wikipedia.org/wiki/Aristotle" target="_blank"></a><li>The O.P. (original philosopher) Aristotle</li></a>
-          <a href="https://en.wikipedia.org/wiki/Homer" target="_blank"></a><li>Homer</li></a>
-          <a href="https://en.wikipedia.org/wiki/Yanni" target="_blank"></a><li>Yanni</li></a>
+          <a href="https://en.wikipedia.org/wiki/Aristotle_Onassis" target="_blank"><li>Aristotle Onassis</li></a>
+          <a href="https://en.wikipedia.org/wiki/Aristotle" target="_blank"><li>The O.P. (original philosopher) Aristotle</li></a>
+          <a href="https://en.wikipedia.org/wiki/Homer" target="_blank"><li>Homer</li></a>
+          <a href="https://en.wikipedia.org/wiki/Yanni" target="_blank"><li>Yanni</li></a>
         </ul>
       </section>
     </article>
