--- a/pages/ireland.html
+++ b/pages/ireland.html
@@ -13,6 +13,8 @@
     <!-- logo -->
     <img src="/./images/countLogo.jpg" alt="CCCC Logo">
     <!-- navbar -->
+    <div class="header__container">
+      <div class="site-title"><h1>Column Counts Country Concierge</h1></div>
     <nav class="nav">
       <a href="/./index.html" class="nav__btn">Home</a>
       <a href="canada.html" class="nav__btn">Canada</a>
@@ -21,6 +23,7 @@
       <a href="ireland.html" class="nav__btn nav__btn--active">Ireland</a>
       <a href="japan.html" class="nav__btn">Japan</a>
     </nav>
+    </div>
   </header>
 
   <main class="main">
