semi-final changes to landing page css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- temporary css link -->
     <link rel="stylesheet" href="styles/landingpage.css">
   </head>
-<body>
+<body class="body-element">
   <header class="header">
     <!-- logo -->
     <img src="/./images/countLogo.jpg" alt="CCCC Logo">
@@ -28,7 +28,7 @@
     </div>
   </header>
   <main class="container">
-    <h1 class="welcome-headline">Welcome!!!!!!!!!!</h1>
+    <h1 class="welcome-headline">Welcome! Click a flag to begin your adventure!</h1>
     <article class="welcome">
       <setion class="welcome__country"><a href="/pages/canada.html"><img src="/images/canadaFlag.png" alt="canadian flag" class="flag flag-canada"></setion></a>
       <setion class="welcome__country"><a href="/pages/china.html"><img src="/images/chinaFlag.png" alt="chinese flag" class="flag"></setion></a>
@@ -37,7 +37,7 @@
       <setion class="welcome__country"><a href="/pages/japan.html"><img src="/images/japanFlag.png" alt="japanese flag" class="flag flag-japan"></setion></a>
     </article>
   </main>
-  <footer class="footer">
+  <footer class="footer footer-background">
     <div class="footer__copyright">&copy; 2020 - NSS Cohort 45 Column Counts</div>
   </footer>
 
