fixed another typo issue

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
   <main class="container">
     <h1 class="welcome-headline">Welcome! Click a flag to begin your adventure!</h1>
     <article class="welcome">
-      <section class="welcome__country"><a href="/pages/canada.html"><img src="/images/canadaFlag.png" alt="canadian flag" class="flag flag-canada"></section></a>
-      <section class="welcome__country"><a href="/pages/china.html"><img src="/images/chinaFlag.png" alt="chinese flag" class="flag"></section></a>
-      <section class="welcome__country"><a href="/pages/greece.html"><img src="/images/greeceFlag.png" alt="greek flag" class="flag"></section></a>
-      <section class="welcome__country"><a href="/pages/ireland.html"><img src="/images/irelandFlag.png" alt="irish flag" class="flag flag-ireland"></section></a>
-      <section class="welcome__country"><a href="/pages/japan.html"><img src="/images/japanFlag.png" alt="japanese flag" class="flag flag-japan"></section></a>
+      <section class="welcome__country"><a href="/pages/canada.html"><img src="/images/canadaFlag.png" alt="canadian flag" class="flag flag-canada"></a></section>
+      <section class="welcome__country"><a href="/pages/china.html"><img src="/images/chinaFlag.png" alt="chinese flag" class="flag"></a></section>
+      <section class="welcome__country"><a href="/pages/greece.html"><img src="/images/greeceFlag.png" alt="greek flag" class="flag"></a></section>
+      <section class="welcome__country"><a href="/pages/ireland.html"><img src="/images/irelandFlag.png" alt="irish flag" class="flag flag-ireland"></a></section>
+      <section class="welcome__country"><a href="/pages/japan.html"><img src="/images/japanFlag.png" alt="japanese flag" class="flag flag-japan"></a></section>
     </article>
   </main>
   <footer class="footer footer-background">
