fixed lists to put li tags outside a tags

--- a/pages/canada.html
+++ b/pages/canada.html
@@ -32,33 +32,67 @@
       <section class="lists__list">
         <h3>Cities to Visit</h3>
         <ul class="city-list">
-          <a href="https://www.google.com/maps/place/Toronto,+ON,+Canada/" target="_blank"><li>Toronto (Ontario)</li></a>
-          <a href="https://www.google.com/maps/place/Vancouver,+BC,+Canada/" target="_blank"><li>Vancouver (British Columbia)</li></a>
-          <a href="https://www.google.com/maps/place/Montreal,+QC,+Canada/" target="_blank"><li>Montreal (Quebec)</li></a>
-          <a href="https://www.google.com/maps/place/Winnipeg,+MB,+Canada/" target="_blank"><li>Winnipeg (Manitoba)</li></a>
-          <a href="https://www.google.com/maps/place/Edmonton,+AB,+Canada/" target="_blank"><li>Edmonton (Alberta)</li></a>
-          <a href="https://www.google.com/maps/place/Halifax,+NS,+Canada/" target="_blank"><li>Halifax (Nova Scotia)</li></a>
+          <li>
+            <a href="https://www.google.com/maps/place/Toronto,+ON,+Canada/" target="_blank">Toronto (Ontario)</a>
+          </li>
+          <li>
+            <a href="https://www.google.com/maps/place/Vancouver,+BC,+Canada/" target="_blank">Vancouver (British Columbia)</a>
+          </li>
+          <li>
+            <a href="https://www.google.com/maps/place/Montreal,+QC,+Canada/" target="_blank">Montreal (Quebec)</a>
+          </li>
+          <li>
+            <a href="https://www.google.com/maps/place/Winnipeg,+MB,+Canada/" target="_blank">Winnipeg (Manitoba)</a>
+          </li>
+          <li>
+            <a href="https://www.google.com/maps/place/Edmonton,+AB,+Canada/" target="_blank">Edmonton (Alberta)</a>
+          </li>
+          <li>
+            <a href="https://www.google.com/maps/place/Halifax,+NS,+Canada/" target="_blank">Halifax (Nova Scotia)</a>
+          </li>
         </ul>
       </section>
       <section class="lists__list">
         <h3>Landmarks to Visit</h3>
         <ul class="landmarks-list">
-          <a href="https://en.wikipedia.org/wiki/CN_Tower" target="_blank"><li>CN Tower</li></a>
-          <a href="https://en.wikipedia.org/wiki/Banff_National_Park" target="_blank"><li>Banff National Park</li></a>
-          <a href="https://en.wikipedia.org/wiki/Hockey_Hall_of_Fame" target="_blank"><li>Hockey Hall of Fame</li></a>
-          <a href="https://en.wikipedia.org/wiki/Niagara_Falls" target="_blank"><li>Niagara Falls</li></a>
-          <a href="https://www.travelalberta.com/ca/listings/vegreville-pysanka-5217/" target="_blank"><li>The World's Largest Easter Egg</li></a>
+          <li>
+            <a href="https://en.wikipedia.org/wiki/CN_Tower" target="_blank">CN Tower</a>
+          </li>
+          <li>
+            <a href="https://en.wikipedia.org/wiki/Banff_National_Park" target="_blank">Banff National Park</a>
+          </li>
+          <li>
+            <a href="https://en.wikipedia.org/wiki/Hockey_Hall_of_Fame" target="_blank">Hockey Hall of Fame</a>
+          </li>
+          <li>
+            <a href="https://en.wikipedia.org/wiki/Niagara_Falls" target="_blank">Niagara Falls</a>
+          </li>
+          <li>
+            <a href="https://www.travelalberta.com/ca/listings/vegreville-pysanka-5217/" target="_blank">The World's Largest Easter Egg</a>
+          </li>
         </ul>
       </section>
       <section class="lists__list">
         <h3>Notable Canadians</h3>
         <ul class="citizens-list">
-          <a href="https://en.wikipedia.org/wiki/Alex_Trebek" target="_blank"><li>Alex Trebek</li></a>          
-          <a href="https://en.wikipedia.org/wiki/Wayne_Gretzky" target="_blank"><li>Wayne Gretzky</li></a>          
-          <a href="https://en.wikipedia.org/wiki/Pierre_Trudeau" target="_blank"><li>Pierre Trudeau</li></a>          
-          <a href="https://en.wikipedia.org/wiki/Martin_Short" target="_blank"><li>Martin Short</li></a>          
-          <a href="https://en.wikipedia.org/wiki/Seth_Rogen" target="_blank"><li>Seth Rogen</li></a>          
-          <a href="https://en.wikipedia.org/wiki/Neil_Young" target="_blank"><li>Neil Young</li></a>          
+          <li>
+            <a href="https://en.wikipedia.org/wiki/Alex_Trebek" target="_blank">Alex Trebek</a>
+          </li>         
+          <li>
+            <a href="https://en.wikipedia.org/wiki/Wayne_Gretzky" target="_blank">Wayne Gretzky</a>
+          </li>          
+          <li>
+            <a href="https://en.wikipedia.org/wiki/Pierre_Trudeau" target="_blank">Pierre Trudeau</a>
+          </li>          
+          <li>
+            <a href="https://en.wikipedia.org/wiki/Martin_Short" target="_blank">Martin Short</a>
+          </li>          
+          <li>
+            <a href="https://en.wikipedia.org/wiki/Seth_Rogen" target="_blank">Seth Rogen</a>
+          </li>          
+          <li>
+            <a href="https://en.wikipedia.org/wiki/Neil_Young" target="_blank">Neil Young</a>
+          </li>          
         </ul>
       </section>
     </article>
