fixed errors pointed out by validator

--- a/pages/greece.html
+++ b/pages/greece.html
@@ -26,35 +26,35 @@
     </div>
   </header>
 
-  <main class="main">
-</html><div class="main__image"><img src="/./images/greece.jpg" alt="Greece"></div>
+<main class="main">
+<div class="main__image"><img src="/./images/greece.jpg" alt="Greece"></div>
     <h1 class="main__country-name">Greece-d Lightning</h1>
     <article class="lists">
       <section class="lists__list">
         <h3>Cities to Visit:</h3>
         <ul class="lists_cityLinks">
-          <a href="https://en.wikipedia.org/wiki/Santorini" target="_blank"><li>Santorini</li></a>
-          <a href="https://en.wikipedia.org/wiki/Athens" target="_blank"><li>Athens</li></a>
-          <a href="https://en.wikipedia.org/wiki/Mykonos" target="_blank"><li>Mykonos</li></a>
-          <a href="https://en.wikipedia.org/wiki/Rhodes" target="_blank"><li>Rhodes</li></a>
+          <li><a href="https://en.wikipedia.org/wiki/Santorini" target="_blank">Santorini</a></li>
+          <li><a href="https://en.wikipedia.org/wiki/Athens" target="_blank">Athens</a></li>
+          <li><a href="https://en.wikipedia.org/wiki/Mykonos" target="_blank">Mykonos</a></li>
+          <li><a href="https://en.wikipedia.org/wiki/Rhodes" target="_blank">Rhodes</a></li>
         </ul>
       </section>
       <section class="lists__list">
         <h3>Landmarks to Visit:</h3>
         <ul class="lists_landmarksLinks">
-          <a href="https://en.wikipedia.org/wiki/Acropolis_of_Athens" target="_blank"><li>Acropolis of Athens</li></a>
-          <a href="https://en.wikipedia.org/wiki/Parthenon" target="_blank"><li>The Parthenon</li></a>
-          <a href="https://en.wikipedia.org/wiki/Delphi" target="_blank"><li>Delphi</li></a>
-          <a href="https://en.wikipedia.org/wiki/Meteora" target="_blank"><li>Monasteries of Meteora</li></a>
+          <li><a href="https://en.wikipedia.org/wiki/Acropolis_of_Athens" target="_blank">Acropolis of Athens</a></li>
+          <li><a href="https://en.wikipedia.org/wiki/Parthenon" target="_blank">The Parthenon</a></li>
+          <li><a href="https://en.wikipedia.org/wiki/Delphi" target="_blank">Delphi</a></li>
+          <li><a href="https://en.wikipedia.org/wiki/Meteora" target="_blank">Monasteries of Meteora</a></li>
         </ul>
       </section>
       <section class="lists__list"><h3>Notable Greeks:</h3>
         <ul class="lists_landmarksLinks">
-          <a href="https://en.wikipedia.org/wiki/Tommy_Lee" target="_blank"><li>Tommy Lee</li></a>
-          <a href="https://en.wikipedia.org/wiki/Aristotle_Onassis" target="_blank"><li>Aristotle Onassis</li></a>
-          <a href="https://en.wikipedia.org/wiki/Aristotle" target="_blank"><li>The O.P. (original philosopher) Aristotle</li></a>
-          <a href="https://en.wikipedia.org/wiki/Homer" target="_blank"><li>Homer</li></a>
-          <a href="https://en.wikipedia.org/wiki/Yanni" target="_blank"><li>Yanni</li></a>
+          <li><a href="https://en.wikipedia.org/wiki/Tommy_Lee" target="_blank">Tommy Lee</a></li>
+          <li><a href="https://en.wikipedia.org/wiki/Aristotle_Onassis" target="_blank">Aristotle Onassis</a></li>
+          <li><a href="https://en.wikipedia.org/wiki/Aristotle" target="_blank">The O.P. (original philosopher) Aristotle</a></li>
+          <li><a href="https://en.wikipedia.org/wiki/Homer" target="_blank">Homer</a></li>
+          <li><a href="https://en.wikipedia.org/wiki/Yanni" target="_blank">Yanni</a></li>
         </ul>
       </section>
     </article>
