tidying up and making sure nothing broke

--- a/pages/japan.html
+++ b/pages/japan.html
@@ -25,8 +25,6 @@
       </nav>
     </div>
   </header>
-
-
   <main class="main">
     <div class="main__image"><img src="/./images/japan.jpg" alt="Japan"></div>
     <h1 class="main__country-name">Japan - Land Of The Rising Sun</h1>
@@ -34,40 +32,39 @@
       <section class="lists__list">
         <h3>Cities to Visit</h3>
         <ul class="city-list">
-          <a href="https://www.google.com/maps/place/Kyoto,+Japan/" target="_blank"><li>Kyoto</li></a>
-          <a href="https://www.google.com/maps/place/Tokyo,+Japan" target="_blank"><li>Tokyo</li></a>
-          <a href="https://www.google.com/maps/place/Sapporo,+Hokkaido,+Japan" target="_blank"><li>Sapporo</li></a>
-          <a href="https://www.google.com/maps/place/Osaka,+Japan" target="_blank"><li>Osaka</li></a>
-          <a href="https://www.google.com/maps/place/Okinawa,+Japan" target="_blank"><li>Okinawa</li></a>
-          <a href="https://www.google.com/maps/place/Hiroshima,+Japan" target="_blank"><li>Hiroshima</li></a>
+          <li><a href="https://www.google.com/maps/place/Kyoto,+Japan/" target="_blank">Kyoto</a></li>
+          <li><a href="https://www.google.com/maps/place/Tokyo,+Japan" target="_blank">Tokyo</a></li>
+          <li><a href="https://www.google.com/maps/place/Sapporo,+Hokkaido,+Japan" target="_blank">Sapporo</a></li>
+          <li><a href="https://www.google.com/maps/place/Osaka,+Japan" target="_blank">Osaka</a></li>
+          <li><a href="https://www.google.com/maps/place/Okinawa,+Japan" target="_blank">Okinawa</a></li>
+          <li><a href="https://www.google.com/maps/place/Hiroshima,+Japan" target="_blank">Hiroshima</a></li>
         </ul>
       </section>
       <section class="lists__list">
         <h3>Landmarks to Visit</h3>
         <ul class="landmarks-list">
-          <a href="https://en.wikipedia.org/wiki/Tokyo_Imperial_Palace" target="_blank"><li>Tokyo Imperial Palace</li></a>
-          <a href="https://en.wikipedia.org/wiki/Akihabara" target="_blank"><li>Akihabara, Tokyo</li></a>
-          <a href="https://en.wikipedia.org/wiki/Shinjuku_Golden_Gai" target="_blank"><li>Golden Gai, Shinjuku, Tokyo</li></a>
-          <a href="https://en.wikipedia.org/wiki/Kyoto_Imperial_Palace" target="_blank"><li>Kyoto Imperial Palace</li></a>
-          <a href="https://www.tripadvisor.com/Attraction_Review-g298560-d3723729-Reviews-Ganso_Sapporo_Ramen_Street-Sapporo_Hokkaido.html" target="_blank"><li>Sapporo Ramen Street</li></a>
-          <a href="https://en.wikipedia.org/wiki/D%C5%8Dtonbori" target="_blank"><li>Dōtonbori, Osaka</li></a>
-          <a href="https://en.wikipedia.org/wiki/Hiroshima_Peace_Memorial" target="_blank"><li>Hiroshima Peace Memorial</li></a>
+          <li><a href="https://en.wikipedia.org/wiki/Tokyo_Imperial_Palace" target="_blank">Tokyo Imperial Palace</a></li>
+          <li><a href="https://en.wikipedia.org/wiki/Akihabara" target="_blank">Akihabara, Tokyo</a></li>
+          <li><a href="https://en.wikipedia.org/wiki/Shinjuku_Golden_Gai" target="_blank">Golden Gai, Shinjuku, Tokyo</a></li>
+          <li><a href="https://en.wikipedia.org/wiki/Kyoto_Imperial_Palace" target="_blank">Kyoto Imperial Palace</a></li>
+          <li><a href="https://www.tripadvisor.com/Attraction_Review-g298560-d3723729-Reviews-Ganso_Sapporo_Ramen_Street-Sapporo_Hokkaido.html" target="_blank">Sapporo Ramen Street</a></li>
+          <li><a href="https://en.wikipedia.org/wiki/D%C5%8Dtonbori" target="_blank">Dōtonbori, Osaka</a></li>
+          <li><a href="https://en.wikipedia.org/wiki/Hiroshima_Peace_Memorial" target="_blank">Hiroshima Peace Memorial</a></li>
         </ul>
       </section>
       <section class="lists__list">
         <h3>Notable Japanese Citizens</h3>
         <ul class="citizens-list">
-          <a href="https://en.wikipedia.org/wiki/Akira_Kurosawa" target="_blank"><li>Akira Kurosawa, 黒澤明</li></a>          
-          <a href="https://en.wikipedia.org/wiki/Toshiro_Mifune" target="_blank"><li>Toshiro Mifune, 三船敏郎</li></a>          
-          <a href="https://en.wikipedia.org/wiki/Shigeru_Miyamoto" target="_blank"><li>Shigeru Miyamoto, 宮本 茂</li></a>          
-          <a href="https://en.wikipedia.org/wiki/Segata_Sanshiro" target="_blank"><li>Segata Sanshiro, せがた三四郎</li></a>          
-          <a href="https://en.wikipedia.org/wiki/Takeshi_Kitano" target="_blank"><li>Takeshi Kitano, 北野 武</li></a>          
-          <a href="https://en.wikipedia.org/wiki/Hayao_Miyazaki" target="_blank"><li>Hayao Miyazaki, 宮崎 駿</li></a>          
+          <li><a href="https://en.wikipedia.org/wiki/Akira_Kurosawa" target="_blank">Akira Kurosawa, 黒澤明</a> </li>         
+          <li><a href="https://en.wikipedia.org/wiki/Toshiro_Mifune" target="_blank">Toshiro Mifune, 三船敏郎</a> </li>         
+          <li><a href="https://en.wikipedia.org/wiki/Shigeru_Miyamoto" target="_blank">Shigeru Miyamoto, 宮本 茂</a> </li>     
+          <li><a href="https://en.wikipedia.org/wiki/Segata_Sanshiro" target="_blank">Segata Sanshiro, せがた三四郎</a></li>          
+          <li><a href="https://en.wikipedia.org/wiki/Takeshi_Kitano" target="_blank">Takeshi Kitano, 北野 武</a> </li>         
+          <li><a href="https://en.wikipedia.org/wiki/Hayao_Miyazaki" target="_blank">Hayao Miyazaki, 宮崎 駿</a> </li>         
         </ul>
       </section>
     </article>
   </main>
-
   <footer class="footer">
     <div class="footer__copyright">&copy; 2020 - NSS Cohort 45 Column Counts</div>
   </footer>
