China logo Fixed

--- a/pages/China.html
+++ b/pages/China.html
@@ -29,7 +29,7 @@
     </header>
 
     <main class="main">
-        <div class="main__image"><img src="/images/ChinaAssets/Mao.jpg" alt="Canada"></div>
+        <div class="main__image"><img src="/images/ChinaAssets/XiPropaganda.webp" alt="Canada"></div>
         <h1 class="main__country-name">The People's Republic of China</h1>
         <article class="lists">
             <section class="lists__list">
