updated card title

--- a/pages/China.html
+++ b/pages/China.html
@@ -58,7 +58,7 @@
                 </ul>
             </section>
             <section class="lists__list">
-                <h3>Great Chinese Citizen</h3>
+                <h3>Great Chinese Citizens</h3>
                 <ul>
                     <li><a href="https://en.wikipedia.org/wiki/Bruce_Lee">Bruce Lee 李小龍</a></li>
                     <li><a href="https://en.wikipedia.org/wiki/Jackie_Chan">Jackie Chan 陳港生</a></li>
