--- a/pages/japan.html
+++ b/pages/japan.html
@@ -26,7 +26,7 @@
     </div>
   </header>
   <main class="main">
-    <div class="main__image"><img src="/./images/japan.jpg" alt="Japan"></div>
+    <div class="main__image"><img src="/./images/godzilla.png" alt="Godzilla"></div>
     <h1 class="main__country-name">Japan - Land Of The Rising Sun</h1>
     <article class="lists">
       <section class="lists__list">
@@ -55,12 +55,12 @@
       <section class="lists__list">
         <h3>Notable Japanese Citizens</h3>
         <ul class="citizens-list">
-          <li><a href="https://en.wikipedia.org/wiki/Akira_Kurosawa" target="_blank">Akira Kurosawa, 黒澤明</a> </li>         
-          <li><a href="https://en.wikipedia.org/wiki/Toshiro_Mifune" target="_blank">Toshiro Mifune, 三船敏郎</a> </li>         
-          <li><a href="https://en.wikipedia.org/wiki/Shigeru_Miyamoto" target="_blank">Shigeru Miyamoto, 宮本 茂</a> </li>     
-          <li><a href="https://en.wikipedia.org/wiki/Segata_Sanshiro" target="_blank">Segata Sanshiro, せがた三四郎</a></li>          
+          <li><a href="https://en.wikipedia.org/wiki/Godzilla_(1954_film)" target="_blank">Godzilla, ゴジラ</a> </li>         
+          <li><a href="https://en.wikipedia.org/wiki/Mothra" target="_blank">Mothra, モスラ</a> </li>         
+          <li><a href="https://en.wikipedia.org/wiki/King_Ghidorah" target="_blank">King Ghidorah, キングギドラ</a> </li>     
+          <li><a href="https://en.wikipedia.org/wiki/Ultraman_(character)" target="_blank">Ultraman, ウルトラマン</a> </li>
           <li><a href="https://en.wikipedia.org/wiki/Takeshi_Kitano" target="_blank">Takeshi Kitano, 北野 武</a> </li>         
-          <li><a href="https://en.wikipedia.org/wiki/Hayao_Miyazaki" target="_blank">Hayao Miyazaki, 宮崎 駿</a> </li>         
+          <li><a href="https://en.wikipedia.org/wiki/Segata_Sanshiro" target="_blank">Segata Sanshiro</a>, <a href="https://www.youtube.com/watch?v=gc3AK8k90xw">せがた三四郎</a></li>            
         </ul>
       </section>
     </article>
