added kaiju headline

--- a/pages/japan.html
+++ b/pages/japan.html
@@ -27,7 +27,7 @@
   </header>
   <main class="main">
     <div class="main__image"><img src="/./images/godzilla.png" alt="Godzilla"></div>
-    <h1 class="main__country-name">Japan - Land Of The Rising Sun</h1>
+    <h1 class="main__country-name">Japan - A country with kaiju</h1>
     <article class="lists">
       <section class="lists__list">
         <h3>Cities to Visit</h3>
