Add new js to lists

--- a/pages/ireland.html
+++ b/pages/ireland.html
@@ -31,30 +31,30 @@
     <h1 class="main__country-name">Ireland - Éire go</h1>
     <article class="lists">
       <section class="lists__list"><h3>Cities to Visit</h3>
-        <ul>
-            <li><a href="https://www.irishtourism.com/belfast">Belfast</a></li>
+        <ul class="lists__list--cities">
+            <!-- <li><a href="https://www.irishtourism.com/belfast">Belfast</a></li>
             <li><a href="https://www.irishtourism.com/cork">Cork</a></li>
             <li><a href="https://www.irishtourism.com/dublin">Dublin</a></li>
             <li><a href="https://www.irishtourism.com/galway">Galway</a></li>
             <li><a href="https://www.irishtourism.com/limerick">Limerick</a></li>
-         </ul>
+         </ul> -->
       </section>
       <section class="lists__list"><h3>Landmarks to Visit</h3>
-        <ul>
-            <li><a href="https://www.cntraveler.com/galleries/2016-03-15/the-most-beautiful-places-in-ireland">Achill Island, Co. Mayo</a></li>
+        <ul class="lists__list--locations">
+            <!-- <li><a href="https://www.cntraveler.com/galleries/2016-03-15/the-most-beautiful-places-in-ireland">Achill Island, Co. Mayo</a></li>
             <li><a href="https://www.cntraveler.com/galleries/2016-03-15/the-most-beautiful-places-in-ireland">Cliffs of Moher, Co. Clare</a></li>
             <li><a href="https://www.cntraveler.com/galleries/2016-03-15/the-most-beautiful-places-in-ireland">Killarney National Park, Co. Kerry</a></li>
             <li><a href="https://www.cntraveler.com/galleries/2016-03-15/the-most-beautiful-places-in-ireland">Rock of Cashel, Co. Tipperary</a></li>
-            <li><a href="https://www.cntraveler.com/galleries/2016-03-15/the-most-beautiful-places-in-ireland">The Long Room, Trinity College, Co. Dublin</a></li>
+            <li><a href="https://www.cntraveler.com/galleries/2016-03-15/the-most-beautiful-places-in-ireland">The Long Room, Trinity College, Co. Dublin</a></li> -->
         </ul>
       </section>
-      <section class="lists__list"><h3>Notable Irish People</h3>
-        <ul>
-            <li><a href="https://en.wikipedia.org/wiki/Bono">Bono</a></li>
+      <section class="lists__list"><h3>Notable Irish Citizens</h3>
+        <ul class="lists__list--citizens">
+            <!-- <li><a href="https://en.wikipedia.org/wiki/Bono">Bono</a></li>
             <li><a href="https://en.wikipedia.org/wiki/Liam_Neeson">Liam Neeson</a></li>
             <li><a href="https://en.wikipedia.org/wiki/Oscar_Wilde">Oscar Wilde</a></li>
             <li><a href="https://en.wikipedia.org/wiki/Pierce_Brosnan">Pierce Brosnan</a></li>
-            <li><a href="https://en.wikipedia.org/wiki/The_Corrs">The Corrs</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/The_Corrs">The Corrs</a></li> -->
         </ul>
       </section>
     </article>
@@ -63,5 +63,6 @@
   <footer class="footer">
     <div class="footer__copyright">&copy; 2020 - NSS Cohort 45 Column Counts</div>
   </footer>
+  <script type="module" src="/./scripts/ireland/main.js"></script> 
 </body>
 </html>
