landing page is now dynamic

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="header__container">
       <div class="site-title"><h1>Column Counts Country Concierge</h1></div>
       <nav class="nav">
-        <a href="#" class="nav__btn   nav__btn--active">Home</a>
+        <a href="#" class="nav__btn nav__btn--active">Home</a>
         <a href="pages/canada.html" class="nav__btn">Canada</a>
         <a href="pages/china.html" class="nav__btn">China</a>
         <a href="pages/greece.html" class="nav__btn">Greece</a>
@@ -30,17 +30,13 @@
   <main class="container">
     <h1 class="welcome-headline">Welcome! Click a flag to begin your adventure!</h1>
     <article class="welcome">
-      <section class="welcome__country"><a href="/pages/canada.html"><img src="/images/canadaFlag.png" alt="canadian flag" class="flag flag-canada"></a></section>
-      <section class="welcome__country"><a href="/pages/china.html"><img src="/images/chinaFlag.png" alt="chinese flag" class="flag"></a></section>
-      <section class="welcome__country"><a href="/pages/greece.html"><img src="/images/greeceFlag.png" alt="greek flag" class="flag"></a></section>
-      <section class="welcome__country"><a href="/pages/ireland.html"><img src="/images/irelandFlag.png" alt="irish flag" class="flag flag-ireland"></a></section>
-      <section class="welcome__country"><a href="/pages/japan.html"><img src="/images/japanFlag.png" alt="japanese flag" class="flag flag-japan"></a></section>
+      <!-- Here's where the flag HTML was -->
     </article>
   </main>
   <footer class="footer footer-background">
     <div class="footer__copyright">&copy; 2020 - NSS Cohort 45 Column Counts</div>
   </footer>
-
+<script src="./scripts/main.js" type="module"></script>
   
 
 </body>
